refactor(config): centralize validated backend properties